--- a/configs/Omni/panorama.yaml
+++ b/configs/Omni/panorama.yaml
@@ -1,6 +1,7 @@
 dataset: 'ocam_panorama'
 data:
-  input_folder: /data/chsung/201029_coex_s9
+  # input_folder: /data/chsung/201029_coex_s9
+  input_folder: /data/multipleye/201029_coex_s9
   output: output/Omni_panorama/tmp_201029_coex_s9_small_6
 grid_len:
   coarse: 2 
@@ -35,9 +36,10 @@ mapping:
   ckpt_freq: 10
   keyframe_every: 1
   mapping_window_size: 10
-  pixels: 20000
-  iters_first: 500
-  iters: 300
+  frustum_feature_selection: False
+  pixels: 10000
+  iters_first: 1000
+  iters: 1000
   # bound: [[-25.0, 60.0], [-5.0, 2.0], [-60.0, 25.0]]
   # bound: [[-33.0, 28.0], [-5.0, 2.0], [-23.0, 26.0]]
   bound: [[-14.0, 10.0], [-5.0, 2.0], [-15.0, 10.0]] 
