--- a/configs/Omni/coex_panorama.yaml
+++ b/configs/Omni/coex_panorama.yaml
@@ -2,7 +2,7 @@ dataset: 'ocam_panorama'
 data:
   # input_folder: /data/chsung/201029_coex_s9
   input_folder: /data/multipleye/201029_coex_s9
-  output: output/Omni_panorama/201029_coex_s9_large_2
+  output: output/tmp/tmp1
   config_file: config.yaml
   poses_file: trajectory_no_dynamic_lidar_large.txt
 grid_len:
@@ -42,14 +42,16 @@ mapping:
   pixels: 5000
   iters_first: 1000
   iters: 1000
-  bound: [[-25.0, 60.0], [-5.0, 2.0], [-60.0, 25.0]]
+  # bound: [[-25.0, 60.0], [-5.0, 2.0], [-60.0, 25.0]]
   # bound: [[-33.0, 28.0], [-5.0, 2.0], [-23.0, 26.0]]
   # bound: [[-20.0, 20.0], [-5.0, 2.0], [-20.0, 20.0]] 
   # bound: [[-20.0, 30.0], [-5.0, 2.0], [-30.0, 20.0]] 
-  marching_cubes_bound: [[-25.0, 60.0], [-5.0, 2.0], [-60.0, 25.0]]
+  bound: [[-1.0, 1.0], [-1.0, 1.0], [-1.0, 1.0]] 
+  # marching_cubes_bound: [[-25.0, 60.0], [-5.0, 2.0], [-60.0, 25.0]]
   # marching_cubes_bound: [[-33.0, 28.0], [-5.0, 2.0], [-23.0, 26.0]]
   # marching_cubes_bound: [[-20.0, 20.0], [-5.0, 2.0], [-20.0, 20.0]] 
   # marching_cubes_bound: [[-20.0, 30.0], [-5.0, 2.0], [-30.0, 20.0]]
+  marching_cubes_bound: [[-1.0, 1.0], [-1.0, 1.0], [-1.0, 1.0]] 
   no_vis_on_first_frame: False
 cam:
   H: 160
@@ -58,6 +60,29 @@ cam:
   method: 'panorama'
   phi_deg: -45.0
   phi_max_deg: 45.0
+omnimvs:
+  device: "cuda:0"
+  config_file: config.yaml
+  network_type: default
+  snapshot_path: pretrained/omnimvs/full3-2x-rgb-reflect2_42.pt
+  dbname: 201029_coex_s9
+  db_root: /data/multipleye
+  db_config_idxs: []
+  net_freeze: False
+  omnimvs_opts:
+    poses_file: trajectory_no_dynamic_lidar_small.txt
+    phi_deg: -45
+    phi_max_deg: 45
+    num_invdepth: 192
+    equirect_size: [160, 640]
+    out_cost: True
+    lt_equirect_sample_ratio: 1
+    lt_depth_sample_ratio: 2
+  net_opts:
+    CH: 32
+    circular_pad: True
+    upsample: False
+    use_rgb: True
 rendering:
   N_samples: 128
   N_surface: 64
