--- a/configs/nice_slam.yaml
+++ b/configs/nice_slam.yaml
@@ -93,6 +93,26 @@ mapping:
       middle_lr: 0.005
       fine_lr: 0.005
       color_lr: 0.005
+omnimvs:
+  device: "cuda:0"
+  config_file: config.yaml
+  poses_file: trajectory.txt
+  network_type: 'default'
+  snapshot_path: 'pretrained/omnimvs/full3-2x-rgb-reflect2_42.pt'
+  dbname: '211021_seerslab'
+  net_freeze: False
+  omnimvs_opts:
+    phi_deg: -45
+    phi_max_deg: 45
+    num_invdepth: 192
+    equirect_size: [160, 640]
+    out_cost: True
+    lt_equirect_sample_ratio: 2
+    lt_depth_sample_ratio: 4
+  net_opts:
+    ccircular_pad: True
+    upsample: False
+    use_rgb: True
 cam:
   H: 680
   W: 1200
